# ESP_BasicHead

./: .gitignore
ESP_BasicHead/: CMakeLists.txt  ESP_BasicHead.sln  ESP_BasicHead.vgdbproj  sdkconfig
ESP_BasicHead/main/: CMakeLists.txt  main.c  main.h
ESP_BasicHead/main/K_Core/: revsionhistory.h  taskmanager.c
ESP_BasicHead/main/K_Core/adc/: adc.c  adc.h
ESP_BasicHead/main/K_Core/gpio/: pinout_T_display.h
ESP_BasicHead/main/K_Core/rcc/: rcc.h
ESP_BasicHead/main/K_Core/spi/: spi.c  spi.h
ESP_BasicHead/main/K_Core/tle5012/: tle5012.h
ESP_BasicHead/main/K_Core/utils/: messages.c  messages.h
ESP_BasicHead/main/L_Core/display/: DisplayList.c  colortables.h  display.c  display.h  gui.c  gui.h  lcdspi.c  lcdspi.h
ESP_BasicHead/main/Pheonix/: configure.h  global.h  revsionhistory.h  taskmanager.c  taskmanager.h
ESP_BasicHead/main/Pheonix/display/: DisplayList.c  DisplayList.h  LcdDefinitions.h  colortables.c  colortables.h  display.c  display.h  gui.c  lcdspi.c  lcdspi.h
ESP_BasicHead/main/Pheonix/display/ST7789/: st7789-103012.c  st7789-103012.h  st7789-t-display.c  st7789-t-display.h  st7789.c  st7789.h
ESP_BasicHead/main/Pheonix/gpio/: pininit.c  pininit.h  pinout.h  pinout_103012.h  pinout_T_display.h
ESP_BasicHead/main/Pheonix/rcc/: rcc.c
ESP_BasicHead/main/Pheonix/spi/: spi.c  spi.h
ESP_BasicHead/main/Pheonix/tle5012/: tle5012.c
ESP_BasicHead/main/Pheonix/utils/: messages.h
TLE5012_TEXT_X1_ARD/: TLE5012_TEXT_X1_ARD.sln  TLE5012_TEXT_X1_ARD.vgdbproj
TLE5012_TEXT_X1_ARD/main/: CMakeLists.txt  main.c
TLE5012_TEXT_X1_ARD/main/TLE5012/: TLE5012.c  TLE5012.h
